--- a/www/index.html
+++ b/www/index.html
@@ -177,7 +177,9 @@
 			</div>
 		</div>
 	</div>
-	
+<br/>
+<br/>
+<center><a target="_blank" href="http://www.elmaspc.com/"><img src="img/logos.png"></a></center>
 	</body>
 
 </html>
