--- a/www/index.html
+++ b/www/index.html
@@ -111,9 +111,9 @@
 						<option value="bolu">Bolu</option>
 						<option value="burdur">Burdur</option>
 						<option value="bursa">Bursa</option>
-						<option value="canakkale">Çanakkale</option>
-						<option value="cankiri">Çankırı</option>
-						<option value="corum">Çorum</option>
+						<option value="canakkale">canakkale</option>
+						<option value="cankiri">cankırı</option>
+						<option value="corum">corum</option>
 						<option value="denizli">Denizli</option>
 						<option value="diyarbakir">Diyarbakır</option>
 						<option value="duzce">Düzce</option>
@@ -147,6 +147,7 @@
 						<option value="malatya">Malatya</option>
 						<option value="manisa">Manisa</option>
 						<option value="mardin">Mardin</option>
+						<option value="mersin">Mersin</option>
 						<option value="mugla">Muğla</option>
 						<option value="mus">Muş</option>
 						<option value="nevsehir">Nevşehir</option>
@@ -166,9 +167,8 @@
 						<option value="trabzon">Trabzon</option>
 						<option value="tunceli">Tunceli</option>
 						<option value="usak">Uşak</option>
-						<option value="van">Van</option>
+						<option value="van">van</option>
 						<option value="yalova">Yalova</option>
-						<option value="icel">İçel</option>
 						<option value="yozgat">Yozgat</option>
 						<option value="zonguldak">Zonguldak</option>
 					</select><br>
@@ -177,9 +177,6 @@
 			</div>
 		</div>
 	</div>
-<br/>
-<br/>
-<center><a target="_blank" href="http://www.elmaspc.com/"><img src="img/logos.png"></a></center>
-	</body>
+</body>
 
 </html>
