--- a/www/index.html
+++ b/www/index.html
@@ -111,9 +111,9 @@
 						<option value="bolu">Bolu</option>
 						<option value="burdur">Burdur</option>
 						<option value="bursa">Bursa</option>
-						<option value="canakkale">canakkale</option>
-						<option value="cankiri">cankırı</option>
-						<option value="corum">corum</option>
+						<option value="canakkale">Çanakkale</option>
+						<option value="cankiri">Çankırı</option>
+						<option value="corum">Çorum</option>
 						<option value="denizli">Denizli</option>
 						<option value="diyarbakir">Diyarbakır</option>
 						<option value="duzce">Düzce</option>
@@ -167,7 +167,7 @@
 						<option value="trabzon">Trabzon</option>
 						<option value="tunceli">Tunceli</option>
 						<option value="usak">Uşak</option>
-						<option value="van">van</option>
+						<option value="van">Van</option>
 						<option value="yalova">Yalova</option>
 						<option value="yozgat">Yozgat</option>
 						<option value="zonguldak">Zonguldak</option>
@@ -177,6 +177,7 @@
 			</div>
 		</div>
 	</div>
-</body>
+	
+	</body>
 
 </html>
